<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>frmRoundCircle</class>
 <widget class="QWidget" name="frmRoundCircle">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>500</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="RoundCircle" name="roundCircle1"/>
   </item>
   <item row="0" column="1">
    <widget class="RoundCircle" name="roundCircle2"/>
   </item>
   <item row="1" column="0">
    <widget class="RoundCircle" name="roundCircle3"/>
   </item>
   <item row="1" column="1">
    <widget class="RoundCircle" name="roundCircle4"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>RoundCircle</class>
   <extends>QWidget</extends>
   <header>roundcircle.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
